--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                            <h1>8 ball pool is a game you can play on your phone</h1>
+                            <a href="https://itunes.apple.com/us/app/8-ball-pool/id543186831?mt=8" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
                         </div>
                     </div>
                 </div>
