--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                                    <img src="img/screen696x696.jpeg" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
+                    <h2 class="section-heading">find out how to play easily!</h2>
                     <p>Our app is available on any mobile device! Download now to get started!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
@@ -117,8 +117,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>On demand pool 24/7</h2></h2>
+                        <p class="text-muted">Check out what you can do with game</p>
                         <hr>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                    <img src="img/pool.jpeg" class="img-responsive" alt=""> </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -143,31 +143,31 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <i class="icon-user text-primary"></i>
+                                    <h3>Play with frinds</h3>
+                                    <p class="text-muted">compete in one on one or 8 player tournaments </p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <i class="icon-cloud-upload text-primary"></i>
+                                    <h3>Save YOur Data</h3>
+                                    <p class="text-muted">Save Your Level and Cues</p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <i class="icon-film text-primary"></i>
+                                    <h3>Get Free Coins</h3>
+                                    <p class="text-muted">get free coins for watching videos.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
+                                    <h3>unlock cues and such things</h3>
                                     <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
                                 </div>
                             </div>
